Fixing price boxes on mobile

--- a/index.css
+++ b/index.css
@@ -443,7 +443,7 @@ footer p {
         align-items: center;
      }    
      .price_box {
-       max-width: 400px;
+       max-width: 300px;
        margin: 0 auto;
        margin-bottom: 25px;
      }
